# Spaceborne

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  2026-07-07-174525-perform-a-general-check-of-the-spaceborne-code-y.txt  2026-07-10-160837-possible-sb-upgrades.txt  ARCHITECTURE_REVIEW.md  CITATION.cff  CLAUDE.md  DEMO.ipynb  Dockerfile  Manifest.toml  Project.toml  README.md  REVIEW_BRIEF.md  TASK.md  _config_RR2.yaml  compare_covs.py  config.yaml  config_guada.yaml  config_public.yaml  config_release.yaml  cov_transform.py  davide.npy  docker-compose.yaml  environment.yaml  environment.yml  environment_linux.yaml  environment_macOS.yaml  example_cfg.yaml  example_config.yaml  launch_jobs.py  main.py  main_public.py  main_release.py  main_sofia.py  nzRR2_EP06_nbl32_ellmax1500.yaml  nzRR2_EP06_nbl32_ellmax1500_BNT.yaml  nzRR2_EP06_nbl32_ellmax5000.yaml  nzRR2_EP06_nbl32_ellmax5000_BNT.yaml  nzSPV3_EP06_nbl32_ellmax5000.yaml  (+17 more)
common_cfg/: mpl_cfg.py
graphify-out/: .graphify_labels.json  .graphify_python  .graphify_root  GRAPH_REPORT.md  cost.json  graph.html  graph.json  manifest.json
misc/: plot_cov_terms.py
spaceborne/: __init__.py  akima.py  batch_run_utils.py  bnt.py  bnt_transform_cov.py  ccl_interface.py  cl_utils.py  cloelib_interface.py  compute_Sijkl.py  config_checker.py  constants.py  cosmo_lib.py  cov_checker.py  cov_cosebis.py  cov_dict.py  cov_harmonic_space.py  cov_partial_sky.py  cov_projector.py  cov_real_space.py  cov_real_space_bu.py  cov_real_space_original.py  cov_ssc.py  cov_transform.py  covariance.py  ell_utils.py  io_handler.py  julia_integrator.jl  julia_integrator_gpu.jl  main.py  mask_utils.py  my_module.py  oc_interface.py  onecovariance_interface.py  plot_lib.py  pyccl_cov_class.py  pyccl_interface.py  responses.py  sb_lib.py  sigma2_SSC.py  sigma2_ssc.py  (+6 more)
tests/: bench_set_check.py  bench_set_create.py  compare_covs.py  conftest.py  generate_bench_set.py  test_batch_run_utils.py  (+20 more)
(+15 files in other folders)
