[tool.poetry]
name = "Spaceborne"
readme = "README.md"
version = "2025.07.0"
license = "MIT License"
description = "Code to compute the covariance matrix for the 3x2pt photometric survey in harmonic and real space."
authors = ["davidesciotti <84071067+davidesciotti@users.noreply.github.com>"]


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff.format]
# Prefer single quotes over double quotes.
quote-style = "single"

[tool.pylint]
disable = [
  "C0302",  # Too many lines
  "C0111",  # Missing docstring
  "W0621",  # Redefining name from outer scope
  "C0415",  # Import outside top-level
  "C0301",  # Line too long
  "C0412",  # Ungrouped imports
  "C0103",  # Constant naming
  "W0201",  # Attribute-defined-outside-init
]